{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 36,
  "lineage": "763e0d10-9827-ac2e-cb49-08c932dbccda",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503442295900:loadbalancer/app/transferencia-dev-load-balancer/f5f63f21171f05a2",
            "arn_suffix": "app/transferencia-dev-load-balancer/f5f63f21171f05a2",
            "dns_name": "transferencia-dev-load-balancer-2057346306.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:503442295900:loadbalancer/app/transferencia-dev-load-balancer/f5f63f21171f05a2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "transferencia-dev-load-balancer",
            "security_groups": [
              "sg-02ee2d606ece7b8fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02e61a74877fccecf"
              },
              {
                "subnet_id": "subnet-0ea239ae3470785e6"
              }
            ],
            "subnets": [
              "subnet-02e61a74877fccecf",
              "subnet-0ea239ae3470785e6"
            ],
            "vpc_id": "vpc-0754f8444dda47af5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503442295900:listener/app/transferencia-dev-load-balancer/f5f63f21171f05a2/c2cea0a50bd30f64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:503442295900:targetgroup/transferencia-dev-target-group/f40a4f7f1133f85a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:503442295900:listener/app/transferencia-dev-load-balancer/f5f63f21171f05a2/c2cea0a50bd30f64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:503442295900:loadbalancer/app/transferencia-dev-load-balancer/f5f63f21171f05a2",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.this",
            "aws_alb_target_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:503442295900:targetgroup/transferencia-dev-target-group/f40a4f7f1133f85a",
            "arn_suffix": "targetgroup/transferencia-dev-target-group/f40a4f7f1133f85a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:503442295900:targetgroup/transferencia-dev-target-group/f40a4f7f1133f85a",
            "lambda_multi_value_headers_enabled": false,
            "name": "transferencia-dev-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0554ee2ceebcf0a5a",
            "public_dns": "ec2-54-158-10-93.compute-1.amazonaws.com",
            "public_ip": "54.158.10.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0ead9a5ed7043a2ec",
            "public_dns": "ec2-54-172-143-217.compute-1.amazonaws.com",
            "public_ip": "54.172.143.217",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f5f8ce34d1cc1806",
            "owner_id": "503442295900",
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0554ee2ceebcf0a5a",
            "id": "nat-08cd60c3c83a6210f",
            "network_interface_id": "eni-0cb2ac03b02f27240",
            "private_ip": "10.1.2.109",
            "public_ip": "54.158.10.93",
            "subnet_id": "subnet-02e61a74877fccecf"
          },
          "depends_on": [
            "aws_eip.this",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ead9a5ed7043a2ec",
            "id": "nat-0ca024613b299f0c9",
            "network_interface_id": "eni-0f183d3fea440feab",
            "private_ip": "10.1.3.220",
            "public_ip": "54.172.143.217",
            "subnet_id": "subnet-0ea239ae3470785e6"
          },
          "depends_on": [
            "aws_eip.this",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f5f8ce34d1cc1806",
            "id": "r-rtb-0e1c39260aa285cc71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1c39260aa285cc7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0023737ee0b219a6f",
            "owner_id": "503442295900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08cd60c3c83a6210f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-008db4bb79d2344e7",
            "owner_id": "503442295900",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0ca024613b299f0c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_nat_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0876150ab4598268c",
            "route_table_id": "rtb-0023737ee0b219a6f",
            "subnet_id": "subnet-0da67298567c9ba14"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f1c21b5b2364eec",
            "route_table_id": "rtb-008db4bb79d2344e7",
            "subnet_id": "subnet-03ca350b66748c811"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:security-group/sg-0ddda35ef237bc991",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ddda35ef237bc991",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02ee2d606ece7b8fc"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "transferencia-dev-ecs-tasks-security-group",
            "name_prefix": null,
            "owner_id": "503442295900",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_security_group.lb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:security-group/sg-02ee2d606ece7b8fc",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ee2d606ece7b8fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "transferencia-dev-load-balancer-security-group",
            "name_prefix": null,
            "owner_id": "503442295900",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:subnet/subnet-0da67298567c9ba14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0da67298567c9ba14",
            "map_public_ip_on_launch": false,
            "owner_id": "503442295900",
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:subnet/subnet-03ca350b66748c811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-03ca350b66748c811",
            "map_public_ip_on_launch": false,
            "owner_id": "503442295900",
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:subnet/subnet-02e61a74877fccecf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-02e61a74877fccecf",
            "map_public_ip_on_launch": true,
            "owner_id": "503442295900",
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:subnet/subnet-0ea239ae3470785e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0ea239ae3470785e6",
            "map_public_ip_on_launch": true,
            "owner_id": "503442295900",
            "vpc_id": "vpc-0754f8444dda47af5"
          },
          "depends_on": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:503442295900:vpc/vpc-0754f8444dda47af5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-09a6a5340d05ab09d",
            "default_route_table_id": "rtb-0e1c39260aa285cc7",
            "default_security_group_id": "sg-00688fc7b6e569887",
            "dhcp_options_id": "dopt-b6b053cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0754f8444dda47af5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e1c39260aa285cc7",
            "owner_id": "503442295900",
            "tags": {
              "Env": "dev",
              "ManagedBy": "Terraform",
              "Name": "transferencia-dev-vpc-ecs",
              "Owner": "Samuel Santana",
              "Project": "transferencia-dev"
            }
          }
        }
      ]
    }
  ]
}